Implemented product routes: - Add product - Get product by Id - Get products by type
